# keplerian-sim-demo

./: .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  Trunk.toml  build.rs  index.html
.github/workflows/: trunk.yml
assets/: index.scss  watchdog.js  watchdog.ts
scripts/: update-presets.py
src/: autoscaling_sprites.rs  body.rs  control.rs  gui.rs  keybinds.rs  lib.rs  main.rs  scene.rs  time.rs  universe.rs  web_heartbeat.rs  web_panic_handler.rs
src/assets/: mod.rs
src/cfg/: mod.rs  saved_cell.rs  storage_native.rs  storage_web.rs
src/gfx/: mod.rs  object_conversion.rs  trajectory.rs  wireframe.rs
src/gfx/shaders/: autoscaling_sprites.vert  trajectory.frag  trajectory.vert  wireframe.frag
src/gui/: about.rs  bottom_bar.rs  fps.rs  mod.rs  unit_dv.rs  welcome.rs
src/gui/celestials/: edit.rs  info.rs  list.rs  mod.rs  new.rs
src/gui/celestials/row-descs/: altitude.txt  apoapsis.txt  circumference.txt  cur_pos_x.txt  cur_pos_y.txt  cur_pos_z.txt  cur_vel_x.txt  cur_vel_y.txt  cur_vel_z.txt  density.txt  eccentric_anomaly.elliptic.txt  eccentric_anomaly.hyperbolic.txt  escape_velocity.txt  gravitational_parameter.txt  ideal_surface_gravity.txt  linear_eccentricity.txt  longitude_of_periapsis.txt  mean_anomaly.elliptic.txt  mean_anomaly.hyperbolic.txt  orbital_period.txt  pqw_pos_p.txt  pqw_pos_q.txt  pqw_vel_p.txt  pqw_vel_q.txt  semi_latus_rectum.txt  semi_major_axis.txt  semi_minor_axis.txt  speed.txt  surface_area.txt  true_anomaly.txt  true_anomaly_asymptote.txt  true_longitude.txt  volume.txt
src/gui/celestials/row_descs/: STYLE_GUIDE_EXAMPLE.txt  apoapsis.txt  apoapsis_speed.txt  area_sweep_rate.txt  asymptote_speed.txt  circumference.txt  cur_pos_x.txt  cur_pos_y.txt  cur_pos_z.txt  cur_vel_x.txt  cur_vel_y.txt  cur_vel_z.txt  density.txt  eccentric_anomaly.elliptic.txt  escape_velocity.txt  focal_parameter.txt  gravitational_parameter.txt  ideal_surface_gravity.txt  mean_anomaly.elliptic.txt  mean_motion.txt  orbital_period.txt  periapsis_speed.txt  semi_latus_rectum.txt  semi_major_axis.txt  semi_minor_axis.txt  soi_entry_time.txt  soi_exit_time.txt  soi_radius.txt  specific_angular_momentum.txt  specific_energy.txt  speed.txt  surface_area.txt  time_to_an.txt  time_to_apoapsis.txt  time_to_dn.txt  time_to_periapsis.txt  true_anomaly.txt  volume.txt
src/sim/: body.rs  mod.rs  presets.rs  presets.toml  universe.rs
src/units/: length.rs  mass.rs  mod.rs  time.rs
src/web/: heartbeat.rs  mod.rs  panic_handler.rs
