[package]
name = "keplerian-sim-demo"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam = "0.30.5"
glow = "0.14.2"
keplerian_sim = "0.4.0"
three-d = { version = "0.18.2", features = ["egui-gui"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol-macros = "0.1.1"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlCanvasElement", "WebGl2RenderingContext", "Window", "console"] }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
