[package]
name = "keplerian-sim-demo"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "keplerian_sim_demo"
path = "src/main.rs"
required-features = ["is-bin"]

[features]
is-bin = []

[dependencies]
egui_extras = { version = "0.32", features = ["svg"] }
float-pretty-print = "0.1.1"
glam = "0.30.5"
keplerian_sim = "0.6.1"
ordered-float = "5.0.0"
pastey = "0.1.1"
serde = "1.0.226"
strum = "0.27.2"
strum_macros = "0.27.2"
three-d = { version = "0.18.2", features = ["egui-gui"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
open = "5.3.2"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
directories = "6.0.0"
toml = "0.9.7"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-storage = { version = "0.3.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
    "console",
    "Navigator",
    "Performance",
    "HtmlTextAreaElement",
    "HtmlDocument",
] }
serde_json = "1.0"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[patch.crates-io]
three-d = { version = "0.18.2", git = "https://github.com/Not-A-Normal-Robot/three-d.git", branch = "updated-egui" }

[build-dependencies]
cargo_metadata = "0.15"
toml = "0.9.7"
serde = "1.0"
